<resources>
    <string name="app_name">ShiraLi</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="BROWSE">browse</string>
    <string name="RECENT">RECENTS</string>
    <string name="SEARCH">SEARCH</string>
    <string name="MYMUSIC">MY MUSIC</string>
    <string name="create_a_new_playlist">Create a New Playlist</string>
    <string name="my_music">MY MUSIC</string>
    <string name="top_new_weekly">Top new weekly!</string>
    <string name="by_shirali">By shiraLi</string>
    <string name="albums">Albums</string>
    <string name="view_all">View all</string>
    <string name="recently_played">Recently Played Songs</string>
    <string name="new_releases">NEW RELEASES</string>
    <string name="songs_for_you">Songs for you</string>
    <string name="geners">Genres</string>
    <string name="browse">BROWSE</string>
    <string name="recent">recent</string>
    <string name="play">play</string>
    <string name="search">Search</string>
    <string name="home">HOME</string>
    <string name="recomended">RECOMMENDED</string>
    <string name="playlist">PLAYLISTS</string>
    <string name="inspired_by_your_listening">Inspired by your listening</string>
    <string name="rock">Rock</string>
    <string name="the_playlist_title">The playlist Title</string>
    <string name="for_every_day_and_ever_time_find_pleasment_in_a_very_traditional_play_list_for_all_the_family">For every day and ever time, find pleasment in a very traditional play list for all the family.</string>
    <string name="terms_and_conditions">Terms of Use</string>
    <string name="_1_hour_45_m_minutes">1 hour 45 m minutes</string>
    <string name="_34_songs">34 Songs</string>
    <string name="my_top_rated">My Top Rated</string>
    <string name="chasing_phophecy">Chasing</string>
    <string name="_8th_day">8th Day</string>
    <string name="hooleh">Hooleh!</string>
    <string name="contact_customer_support">Contact customer support</string>
    <string name="sign_out">Sign out</string>
    <string name="refresh_my_music">Refresh my Music</string>
    <string name="version">Version</string>
    <string name="help">Help</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="create_account">Create account</string>
    <string name="cancel">Cancel</string>
    <string name="recover_your_password">recover your password</string>
    <string name="albums_for_you">Albums for you</string>
    <string name="stations_for_you">Stations for you</string>
    <string name="create_your_first_playlist_here_it_s_easy">Create your first Playlist here, it’s easy!</string>
    <string name="all_mood_amp_geners">All Mood &amp; Genres</string>
    <string name="all_moods_amp_geners">All Mood &amp; Genres</string>
    <string name="_45_minutes">45 minutes</string>
    <string name="hour_minute">1 hour 45 minutes</string>
    <string name="_18_songs">18 Songs</string>
    <string name="recently_added_to_music">Recently added To My Music</string>
    <string name="my_playlist">My Playlist</string>
    <string name="auto_playlist">Auto Playlist</string>
    <string name="all_genres">All Genres</string>
    <string name="newly_released_albums">Newly Released Albums</string>
    <string name="newly_released_songs">Newly Released Songs</string>
    <string name="top_songs">Top Songs</string>
    <string name="popular">Popular</string>
    <string name="most_listened_songs_updated_daily">Most Listened songs. Updated daily.</string>
    <string name="log_in">Log in</string>
    <string name="an_email_has_been_sent_n_please_follow_the_step_on_it">An email has been sent.\nPlease follow the steps on it.</string>
    <string name="recently_searchs">Recently Searched</string>
    <string name="clear_search_history">Clear Search History</string>
    <string name="trending">Trending</string>
    <string name="benny_friedman">Benny Friedman</string>
    <string name="the_jew_brothers">The Jew Brothers</string>
    <string name="ary_glodwall">Ary Glodwall</string>
    <string name="traditional_music">Traditional Music</string>
    <string name="festival">Festival</string>
    <string name="genres">Genres</string>
    <string name="forgot_my_password">Forgot my password</string>
    <string name="i_don_t_have_an_account">I don\&apos;t have an account</string>
    <string name="expiration_date">Expiration date</string>
    <string name="security_code">Security code</string>
    <string name="kulam_sharim">Kulam Sharim</string>
    <string name="add_to_my_playlist_3">Add to my Playlist #3</string>
    <string name="no_songs">No Songs</string>
    <string name="done">Done</string>
    <string name="aksd">aksd</string>
    <string name="legal_information">Legal information</string>
    <string name="get_alerts_related_to_your_app">Get alerts related to your app</string>
    <string name="notifications">Notifications</string>
    <string name="streaming_audio_quality">Streaming Audio Quality</string>
    <string name="filter_your_music">Filter your Music</string>
    <string name="join_shira_li_premium">Join ShiraLi Premium</string>
    <string name="choose_your_subscription">Choose your subscription</string>
    <string name="three_doller">$$$</string>
    <string name="family_monthly">Family Monthly</string>
    <string name="family_annual">Family Annual</string>
    <string name="your_music_everywhere">Your music everywhere</string>
    <string name="to_suscribe_please_fill_out_the_information_below">To subscribe please fill out the information below</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="address">Address</string>
    <string name="billing_adress">Billing Address</string>
    <string name="use_same_as_mail_address">Use same as mail address</string>
    <string name="payment">Payment Info</string>
    <string name="credit_card_name">Credit Card Name</string>
    <string name="credit_card_number">Credit Card Number</string>
    <string name="want_to_use_another_payment_option">Want to use another payment option?</string>
    <string name="subscribe">subscribe</string>
    <string name="traditional">Trad</string>
    <string name="hiph">HipH</string>
    <string name="clas">Clas</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_an_account">Create an account</string>
    <string name="start_streaming">Start streaming!</string>
    <string name="remove_from_my_music">Remove from My Music</string>
    <string name="view_album">View Album</string>
    <string name="share_song">Share Song</string>
    <string name="add_end_of_the_queue">Add end of the queue</string>
    <string name="add_next_in_queue">Add next in queue</string>
    <string name="benny">Benny</string>
    <string name="rock_music">Rock Music</string>
    <string name="trad">Trad</string>
    <string name="traditional_jewish_music">Traditional Jewish\nMusic</string>
    <string name="hip_hop">Hip Hop</string>
    <string name="a_capella">A Capella</string>
    <string name="women_vocals">Women Vocals</string>
    <string name="classical_music">Classical Music</string>
    <string name="select_any_of_the_below_and_you_will_never_see_these_types_of_music_in_the_app_unless_you_specifically_search_for_an_artist_that_falls_under_the_type_you_selected">Select any of the below and you will never\nsee these types of music in the app\nunless you specifically search for an artist\nthat falls under the type you selected.</string>
    <string name="skip">Skip</string>
    <string name="wait_a_few_seconds_we_re_loading_your_experience">Wait a few seconds.\nWe\&apos;re loading your experience.</string>
    <string name="song_added_to_your_music">Song added to\nyour music</string>
    <string name="start_saving_your_favourite_artists_for_a_quick_access_and_better_recomendations">Start saving your favorite artists for quick access and better recommendations!</string>
    <string name="start_saving_your_favourite_album_for_a_quick_access_and_better_recomendations">Start saving your favorite albums for quick access and better recommendations!</string>
    <string name="start_saving_your_favourite_song_for_a_quick_access_and_better_recomendations">Start saving your favorite song for quick access and better recommendations!</string>
    <string name="your_favourite_artist">Your favorite artist</string>
    <string name="use_the_plus_icon_to_save">Use the plus icon to save!</string>
    <string name="a_song_i_love">A song I love</string>
    <string name="album">Album</string>
    <string name="here_are_some_of_the_last_songs_you_ve_listened_to_try_to_save_some_of_them">Here are some of the last songs you’ve listened to, try to save some of them!</string>
    <string name="_30_songs_added">30 songs added</string>
    <string name="new_release">New Release</string>
    <string name="with_all_my_soul">With all my soul</string>
    <string name="popular_songs">Popular Songs</string>
    <string name="popular_playlists">Popular Playlists</string>
    <string name="with_benny_friedman_songs">with Benny Friedman songs</string>
    <string name="related_artists">Related Artists</string>
    <string name="_27th_november_2016">27th November 2016</string>
    <string name="pop">Pop</string>
    <string name="world">World</string>
    <string name="world_music">World Music</string>
    <string name="language">Language</string>
    <string name="music">My Music</string>
    <string name="please_name_your_new_playlist">Name your new Playlist</string>
    <string name="enter_playlist_name">Please Enter Playlist Name</string>
    <string name="create">Create</string>
    <string name="in_my_music">In My Music</string>
    <string name="listen_on_all_devices_ndownload_music_amp_listen_offline_nno_add_amp_no_commitment">As a premium user you can search for specific artists, listen ad free, create personal playlists, and skip unlimited songs all with no interruptions.</string>
    <string name="energetic_amp_fast_tempo"><![CDATA[Energetic & Fast Tempo]]></string>
    <string name="family_amp_fun"><![CDATA[Family & Fun]]></string>
    <string name="happy_amp_upbeat"><![CDATA[Happy & Upbeat]]></string>
    <string name="hard_amp_heavy"><![CDATA[Hard & Heavy]]></string>
    <string name="party_time_amp_entertaining"><![CDATA[Party Time & Entertaining]]></string>
    <string name="relaxed_amp_laid_back"><![CDATA[Relaxed & Laid back]]></string>
    <string name="work_study_amp_reading"><![CDATA[Work, Study & Reading]]></string>
    <string name="dismiss">Dismiss</string>
    <string name="playlist_name">Playlist name</string>
    <string name="you_discovered_a_premium_features">You discovered a Premium feature!</string>
    <string name="with_shiraLi_premium_you_can_skip_as_many_songs_as_you_want">With ShiraLi Premium, you can skip as many songs as you want.</string>
    <string name="subscribe_now">subscribe now</string>
    <string name="not_now">not now</string>
    <string name="do_not_notify_again">do not notify again</string>
    <string name="got_it">got it</string>
    <string name="sefira_3_weeks_mode">“Sefira • 3 Weeks Mode”</string>
    <string name="vocal_only_mode">Vocal Only Mode</string>
    <string name="we_will_skip_all_instrumental_music_and_your_player_will_turn_purple">We will skip all instrumental music and your player will turn purple</string>
    <string name="start">Start</string>
    <string name="we_are_working_to_bring_you_this_music_as_soon_as_possible">We are working to bring you this music as soon as possible</string>
    <string name="library_in_progress">Library in progress</string>
    <string name="login_me">Log in</string>
    <string name="already_have_an_account">Already have an Account?</string>
</resources>