<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="300dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/head"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/artist_gray_profile" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/library_in_progress"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:typeface="normal" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/we_are_working_to_bring_you_this_music_as_soon_as_possible"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblNotifyAgain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/do_not_notify_again"
            android:textAllCaps="true"
            android:textColor="@color/playlist_create"
            android:textSize="14sp"
            android:visibility="gone" />


        <TextView
            android:id="@+id/lblGotIt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="14dp"
            android:text="@string/got_it"
            android:textAllCaps="true"
            android:textColor="@color/playlist_create"
            android:textSize="15sp"
            android:textStyle="bold"
            android:typeface="normal" />
    </LinearLayout>

</LinearLayout>